# rust_web_project_draw

./: .copyignore  Cargo.toml  README.md  Trunk.toml  index.html  leptos_config.toml  notes.md  question.md  requirements.md  styles.css  temp.md  todo.md
.kiro/specs/basic-web-server/: design.md  requirements.md  tasks.md
src/: demo.rs  lib.rs  main.rs  prelude.rs
src/components/: canvas.rs  mod.rs  toolbar.rs
src/other/: server.rs
src/prelude/: bitmap.rs  geometry.rs  mod.rs
src/services/: websocket.rs
src/shared/: mod.rs
src/types/: mod.rs  pixel_canvas.rs
