[package]
name = "rust_web"
version = "0.1.0"
edition = "2021"

#[lib]
#crate-type=["cdylib"]
#
#[[bin]]
#name = "rust_web"
#path = "src/main.rs"

[dependencies]
leptos = { version = "0.8.6", features = ["csr"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = {version="0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "Window", "Document"]}
bitvec = "1.0.1"


