[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

#[lib]
#crate-type=["cdylib"]
#
#[[bin]]
#name = "rust_web"
#path = "src/main.rs"

[dependencies]
leptos = { version = "0.8.6", features = ["csr"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = {version="0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "Window", "Document"]}
bitvec = "1.0.1"
leptos-use = "0.16.2"
codee = "0.3.2"
leptos_router = "0.8.6"
uuid = { version = "1.18.0", features = ["js", "v4"] }
shared = {path= "../shared"}
bincode = { version = "2.0.1", features = ["serde"] }
image = "0.25.6"
base64 = "0.22.1"

